--- a/_layouts/archive-taxonomy.html
+++ b/_layouts/archive-taxonomy.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 author_profile: false
+
+header:
+  image: /images/image-alignment-1200x4002.jpg
+
 ---
 
 <div id="main" role="main">
